--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "bzs1984",
             "email": "184706552@qq.com",
-            "homepage": "****",
+            "homepage": "http://www.baidu.com",
             "role": "Developer"
         }
     ],
